idk the difference hard to read nb diffs

--- a/data_munging.ipynb
+++ b/data_munging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "07b1875d",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 13,
    "id": "e642c310",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7fe4f93f",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "ffd67fd2",
    "metadata": {},
    "outputs": [],
@@ -87,38 +87,412 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "9f4c77dc",
+   "execution_count": 18,
+   "id": "c2b62121",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sec</th>\n",
+       "      <th>nanosec</th>\n",
+       "      <th>frame_id</th>\n",
+       "      <th>angle_min</th>\n",
+       "      <th>angle_max</th>\n",
+       "      <th>angle_increment</th>\n",
+       "      <th>time_increment</th>\n",
+       "      <th>scan_time</th>\n",
+       "      <th>range_min</th>\n",
+       "      <th>range_max</th>\n",
+       "      <th>...</th>\n",
+       "      <th>intensity_120</th>\n",
+       "      <th>intensity_121</th>\n",
+       "      <th>intensity_122</th>\n",
+       "      <th>intensity_123</th>\n",
+       "      <th>intensity_124</th>\n",
+       "      <th>intensity_125</th>\n",
+       "      <th>intensity_126</th>\n",
+       "      <th>intensity_127</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1763031069</td>\n",
+       "      <td>897476143</td>\n",
+       "      <td>laser</td>\n",
+       "      <td>-3.124139</td>\n",
+       "      <td>3.141593</td>\n",
+       "      <td>0.003483</td>\n",
+       "      <td>0.000054</td>\n",
+       "      <td>0.096712</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>d_d_5-0.csv</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1763031069</td>\n",
+       "      <td>995956608</td>\n",
+       "      <td>laser</td>\n",
+       "      <td>-3.124139</td>\n",
+       "      <td>3.141593</td>\n",
+       "      <td>0.003483</td>\n",
+       "      <td>0.000057</td>\n",
+       "      <td>0.102634</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>d_d_5-0.csv</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1763031070</td>\n",
+       "      <td>100324519</td>\n",
+       "      <td>laser</td>\n",
+       "      <td>-3.124139</td>\n",
+       "      <td>3.141593</td>\n",
+       "      <td>0.003483</td>\n",
+       "      <td>0.000054</td>\n",
+       "      <td>0.096571</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>d_d_5-0.csv</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1763031070</td>\n",
+       "      <td>198681870</td>\n",
+       "      <td>laser</td>\n",
+       "      <td>-3.124139</td>\n",
+       "      <td>3.141593</td>\n",
+       "      <td>0.003483</td>\n",
+       "      <td>0.000054</td>\n",
+       "      <td>0.096294</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>d_d_5-0.csv</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1763031070</td>\n",
+       "      <td>296467733</td>\n",
+       "      <td>laser</td>\n",
+       "      <td>-3.124139</td>\n",
+       "      <td>3.141593</td>\n",
+       "      <td>0.003483</td>\n",
+       "      <td>0.000057</td>\n",
+       "      <td>0.102975</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>d_d_5-0.csv</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>1763030391</td>\n",
+       "      <td>681421661</td>\n",
+       "      <td>laser</td>\n",
+       "      <td>-3.124139</td>\n",
+       "      <td>3.141593</td>\n",
+       "      <td>0.003483</td>\n",
+       "      <td>0.000057</td>\n",
+       "      <td>0.102362</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>d_0-7.csv</td>\n",
+       "      <td>0.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>1763030391</td>\n",
+       "      <td>785433744</td>\n",
+       "      <td>laser</td>\n",
+       "      <td>-3.124139</td>\n",
+       "      <td>3.141593</td>\n",
+       "      <td>0.003483</td>\n",
+       "      <td>0.000057</td>\n",
+       "      <td>0.102730</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>d_0-7.csv</td>\n",
+       "      <td>0.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>1763030391</td>\n",
+       "      <td>889864218</td>\n",
+       "      <td>laser</td>\n",
+       "      <td>-3.124139</td>\n",
+       "      <td>3.141593</td>\n",
+       "      <td>0.003483</td>\n",
+       "      <td>0.000054</td>\n",
+       "      <td>0.096591</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>d_0-7.csv</td>\n",
+       "      <td>0.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>1763030391</td>\n",
+       "      <td>988148216</td>\n",
+       "      <td>laser</td>\n",
+       "      <td>-3.124139</td>\n",
+       "      <td>3.141593</td>\n",
+       "      <td>0.003483</td>\n",
+       "      <td>0.000057</td>\n",
+       "      <td>0.102682</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>d_0-7.csv</td>\n",
+       "      <td>0.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>1763030392</td>\n",
+       "      <td>92841169</td>\n",
+       "      <td>laser</td>\n",
+       "      <td>-3.124139</td>\n",
+       "      <td>3.141593</td>\n",
+       "      <td>0.003483</td>\n",
+       "      <td>0.000054</td>\n",
+       "      <td>0.096316</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>d_0-7.csv</td>\n",
+       "      <td>0.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3955 rows × 268 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "1.0545454545454545"
+       "            sec    nanosec frame_id  angle_min  angle_max  angle_increment  \\\n",
+       "0    1763031069  897476143    laser  -3.124139   3.141593         0.003483   \n",
+       "1    1763031069  995956608    laser  -3.124139   3.141593         0.003483   \n",
+       "2    1763031070  100324519    laser  -3.124139   3.141593         0.003483   \n",
+       "3    1763031070  198681870    laser  -3.124139   3.141593         0.003483   \n",
+       "4    1763031070  296467733    laser  -3.124139   3.141593         0.003483   \n",
+       "..          ...        ...      ...        ...        ...              ...   \n",
+       "116  1763030391  681421661    laser  -3.124139   3.141593         0.003483   \n",
+       "117  1763030391  785433744    laser  -3.124139   3.141593         0.003483   \n",
+       "118  1763030391  889864218    laser  -3.124139   3.141593         0.003483   \n",
+       "119  1763030391  988148216    laser  -3.124139   3.141593         0.003483   \n",
+       "120  1763030392   92841169    laser  -3.124139   3.141593         0.003483   \n",
+       "\n",
+       "     time_increment  scan_time  range_min  range_max  ...  intensity_120  \\\n",
+       "0          0.000054   0.096712       0.15       16.0  ...            0.0   \n",
+       "1          0.000057   0.102634       0.15       16.0  ...            0.0   \n",
+       "2          0.000054   0.096571       0.15       16.0  ...            0.0   \n",
+       "3          0.000054   0.096294       0.15       16.0  ...            0.0   \n",
+       "4          0.000057   0.102975       0.15       16.0  ...            0.0   \n",
+       "..              ...        ...        ...        ...  ...            ...   \n",
+       "116        0.000057   0.102362       0.15       16.0  ...            0.0   \n",
+       "117        0.000057   0.102730       0.15       16.0  ...            0.0   \n",
+       "118        0.000054   0.096591       0.15       16.0  ...            0.0   \n",
+       "119        0.000057   0.102682       0.15       16.0  ...            0.0   \n",
+       "120        0.000054   0.096316       0.15       16.0  ...            0.0   \n",
+       "\n",
+       "     intensity_121  intensity_122  intensity_123  intensity_124  \\\n",
+       "0              0.0            0.0            0.0            0.0   \n",
+       "1              0.0            0.0            0.0            0.0   \n",
+       "2              0.0            0.0            0.0            0.0   \n",
+       "3              0.0            0.0            0.0           47.0   \n",
+       "4              0.0            0.0            0.0            0.0   \n",
+       "..             ...            ...            ...            ...   \n",
+       "116            0.0            0.0            0.0           47.0   \n",
+       "117            0.0            0.0            0.0            0.0   \n",
+       "118            0.0            0.0            0.0            0.0   \n",
+       "119            0.0            0.0            0.0            0.0   \n",
+       "120            0.0            0.0            0.0            0.0   \n",
+       "\n",
+       "     intensity_125  intensity_126  intensity_127     filename  distance  \n",
+       "0              0.0           47.0           47.0  d_d_5-0.csv       5.0  \n",
+       "1              0.0           47.0           47.0  d_d_5-0.csv       5.0  \n",
+       "2             47.0           47.0           47.0  d_d_5-0.csv       5.0  \n",
+       "3             47.0           47.0           47.0  d_d_5-0.csv       5.0  \n",
+       "4              0.0            0.0            0.0  d_d_5-0.csv       5.0  \n",
+       "..             ...            ...            ...          ...       ...  \n",
+       "116           47.0           47.0           47.0    d_0-7.csv       0.7  \n",
+       "117            0.0            0.0            0.0    d_0-7.csv       0.7  \n",
+       "118            0.0           47.0           47.0    d_0-7.csv       0.7  \n",
+       "119            0.0            0.0            0.0    d_0-7.csv       0.7  \n",
+       "120            0.0            0.0            0.0    d_0-7.csv       0.7  \n",
+       "\n",
+       "[3955 rows x 268 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "11.6/11.0"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
+   "id": "5b1735f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data/distances_cleaned.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "836d4a4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x710cf67bf4d0>]"
+       "[<matplotlib.lines.Line2D at 0x71500a34bd90>]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -190,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 22,
    "id": "a16fe6e4",
    "metadata": {},
    "outputs": [
@@ -200,7 +574,7 @@
        "Text(47.097222222222214, 0.5, 'LIDAR-measured distance (m)')"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -260,17 +634,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 24,
    "id": "b0520813",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x710cede751d0>"
+       "<matplotlib.legend.Legend at 0x71500b570f50>"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
